--- a/src/main/resources/booklib/MainView.fxml
+++ b/src/main/resources/booklib/MainView.fxml
@@ -10,11 +10,15 @@
 <BorderPane xmlns="http://javafx.com/javafx/17"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="booklib.Controller"
-            prefWidth="900" prefHeight="600">
+            prefWidth="900"
+            prefHeight="600">
 
-    <!-- Левая панель -->
+    <!-- LEFT PANEL -->
     <left>
-        <VBox spacing="20" alignment="TOP_CENTER" BorderPane.alignment="CENTER">
+        <VBox spacing="20"
+              alignment="TOP_CENTER"
+              BorderPane.alignment="CENTER">
+
             <padding>
                 <Insets top="30" right="10" bottom="10" left="20"/>
             </padding>
@@ -22,43 +26,54 @@
             <Button fx:id="addBookButton"
                     text="+ Add Book"
                     onAction="#onAddBook"
-                    style="-fx-font-size: 16px; -fx-background-radius: 10; -fx-padding: 8 20;"/>
+                    style="-fx-font-size: 16px;
+                           -fx-background-radius: 10;
+                           -fx-padding: 8 20;"/>
 
             <Button fx:id="profileButton"
                     text="Profile"
-                    style="-fx-background-radius: 25; -fx-padding: 10 25; -fx-font-size: 14px;"/>
+                    style="-fx-background-radius: 25;
+                           -fx-padding: 10 25;
+                           -fx-font-size: 14px;"/>
 
             <Button fx:id="goalButton"
                     text="Goal"
-                    style="-fx-background-radius: 25; -fx-padding: 10 25; -fx-font-size: 14px;"/>
-
+                    style="-fx-background-radius: 25;
+                           -fx-padding: 10 25;
+                           -fx-font-size: 14px;"/>
         </VBox>
     </left>
 
-    <!-- Центральная часть -->
+    <!-- CENTER CONTENT -->
     <center>
-        <VBox spacing="10" BorderPane.alignment="CENTER">
+        <VBox spacing="10"
+              BorderPane.alignment="CENTER">
+
             <padding>
                 <Insets top="20" right="30" bottom="20" left="10"/>
             </padding>
 
-            <!-- Заголовок -->
+            <!-- TITLE -->
             <Label fx:id="myBooksLabel"
                    text="My Books"
-                   style="-fx-font-size: 20px; -fx-font-weight: bold;"
-            />
+                   style="-fx-font-size: 20px;
+                          -fx-font-weight: bold;"/>
 
-            <!-- Прокручиваемый список книг -->
-            <ScrollPane fitToWidth="true" fitToHeight="true" prefHeight="500">
+            <!-- SCROLLABLE BOOK LIST -->
+            <ScrollPane fitToWidth="true"
+                        fitToHeight="true"
+                        prefHeight="500">
+
                 <content>
                     <VBox fx:id="booksContainer"
                           spacing="15"
-                          style="-fx-background-color: #f9f9f9; -fx-padding: 10;">
-                        <!-- книги будут добавляться сюда программно -->
+                          style="-fx-background-color: #f9f9f9;
+                                 -fx-padding: 10;">
+                        <!-- book cards added programmatically -->
                     </VBox>
                 </content>
-            </ScrollPane>
 
+            </ScrollPane>
         </VBox>
     </center>
 
