--- a/src/main/resources/booklib/MainView.fxml
+++ b/src/main/resources/booklib/MainView.fxml
@@ -49,6 +49,9 @@
                             text="+ Add Book"
                             onAction="#onAddBook"/>
 
+                    <Button text="Logout" onAction="#onLogout"/>
+
+
                     <Button text="Import CSV"
                             onAction="#onImportCsv"/>
 
